<resources>
    <string name="app_name">Developer tools</string>

    <string name="menu_display">Display</string>
    <string name="menu_memory">Memory</string>
    <string name="menu_deep_links">Deep links</string>

    <!-- START -> DISPLAY TOOLS -->
    <string name="display_tools_notification_title">Display tools</string>
    <string name="display_feature_lock">Lock Screen</string>
    <string name="display_feature_lock_description">It allows for the screen to be locked to always on, with some additional functionality to allow dimming or ignore when battery is low.</string>

    <!-- START -> SCREEN ALWAYS ON -->
    <string name="screen_always_on">Screen always on</string>
    <string name="screen_always_on_description">This avoids the screen from turning off. It shows a notification from which the feature can be switched off. Also a quick tile is available to switch on or off the feature.\n\nThe available settings are allow dimming to save some battery life when idle, and disable on battery low to avoid the device from turning off due to no battery.</string>
    <string name="screen_always_on_allow_dimming">Allow dimming</string>
    <string name="screen_always_on_stop_when_low_battery">Stop when low battery</string>
    <string name="screen_always_on_paused_battery_low">Screen always on paused due to low battery</string>
    <string name="screen_always_on_action_turn_off">Turn off</string>
    <string name="screen_always_on_notification_text">Screen always on</string>
    <string name="screen_always_on_notification_text_paused">Screen always on paused due to low battery</string>
    <string name="screen_always_on_notification_text_allow_dimming_on">Dimming allowed</string>
    <string name="screen_always_on_notification_text_allow_dimming_off">Dimming blocked</string>
    <string name="screen_always_on_notification_text_battery_saver_on">Battery saver on</string>
    <string name="screen_always_on_notification_text_battery_saver_off">Battery saver off</string>
    <string name="screen_always_on_action_allow_dimming">Allow dim</string>
    <string name="screen_always_on_action_block_dimming">Block dim</string>
    <string name="screen_always_on_action_battery_saver_on">Battery saver on</string>
    <string name="screen_always_on_action_battery_saver_off">Battery saver off</string>

    <!-- END -> SCREEN ALWAYS ON -->

    <!-- START -> SCREEN ALWAYS ON TILE -->
    <string name="display_screen_always_on_tile_label_on">Screen always on</string>
    <string name="display_screen_always_on_tile_label_off">Screen always off</string>
    <!-- END -> SCREEN ALWAYS ON TILE -->
    <!-- END -> DISPLAY TOOLS -->

    <!-- START -> MEMORY TOOLS -->
    <string name="memory_feature_fill">Zombie Apps test</string>
    <string name="memory_feature_fill_description">This tool fills the device memory to force the system to kill all other processes. It is very useful when trying to test if the app recovers after being killed in the background a.k.a. zombie apps.</string>
    <!-- START -> FILL MEMORY -->
    <string name="fill_memory">Fill memory</string>
    <string name="fill_memory_description">This can be used to test your app when the system kills it in the background.</string>
    <string name="filling_memory">We are filling the memory. Please wait for a while.</string>
    <string name="start_filling_memory">Start</string>
    <string name="stop_filling_memory">Stop</string>
    <string name="successfully_filled_the_memory">Successfully filled the memory</string>
    <string name="failed_to_fill_the_memory">Failed to fill the memory. Try running it again for a longer time or until it is successful.</string>
    <string name="free_memory">Free memory</string>
    <string name="free_memory_percentage">Free memory percentage</string>
    <string name="memory_low">The memory is low. The system will start killing services.</string>
    <string name="concurrent_services">Concurrent services running</string>
    <string name="concurrent_services_ran">Concurrent services ran</string>
    <!-- END -> FILL MEMORY -->
    <!-- END -> MEMORY TOOLS -->

    <string name="on_going_channel_name">Permanent notifications</string>
    <string name="on_going_channel_description">This notifications stay until manually removed</string>

    <string name="megabytes">%1$f MB</string>
    <string name="percentage">%1$f %%</string>
</resources>
